tech: use Java 21 as compile target