@@ -19,7 +19,7 @@
   <description>Test project for trying out microservices and event-driven architecture concepts</description>
 
   <properties>
-    <java.version>17</java.version>
+    <java.version>21</java.version>
     <testcontainers.version>1.19.1</testcontainers.version>
   </properties>
 
@@ -53,6 +53,15 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerArgs>
+            <arg>-proc:full</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
